# thelighted

backend/: package-lock.json  package.json
backend/src/: app.module.ts  errorCatch.util.ts
backend/src/modules/admin/: admin.controller.ts  admin.module.ts  admin.service.ts  audit-log.entity.ts  create-user.dto.ts
backend/src/modules/auth/: admin-user.entity.ts  jwt-auth.guard.ts  jwt.strategy.ts  update-auth.dto.ts
backend/src/modules/cloudinary/: cloudinary.config.ts  cloudinary.controller.ts  cloudinary.module.ts  cloudinary.service.ts
backend/src/types/: multer.d.ts
backend/src/utils/: getPublicRestaurantId.util.ts
contract/payment-escrow/: Cargo.toml
contract/payment-escrow/src/: lib.rs  oracle.rs  storage.rs
contracts/: Cargo.toml
contracts/loyalty_token/: Cargo.toml
contracts/loyalty_token/src/: lib.rs
contracts/order/src/: lib.rs
contracts/payment/: Cargo.toml
contracts/payment/src/: lib.rs
contracts/restaurant_registry/: Cargo.toml
contracts/restaurant_registry/src/: lib.rs
contracts/scripts/: DEPLOYMENT_CHECKLIST.md  README.md  deploy.sh
contracts/tests/: Cargo.toml  integration_test.rs
frontend/: package-lock.json  package.json
frontend/app/shared/: cart.store.ts  payment.store.ts
frontend/lib/: utils.ts
frontend/lib/api/: admin.ts
frontend/lib/hooks/: useMenuItems.ts  useRoleProtection.ts  useTrending.ts
frontend/src/components/admin/: AdminHeader.tsx  AdminLayout.tsx  AdminSidebar.tsx
frontend/src/components/cart/: AddToCartModal.tsx  CartDemo.tsx  CartItemRow.tsx  QuantitySelector.tsx  index.ts
(+16 files in other folders)
